--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -6,6 +6,15 @@
 
 .list_body
   #dashbord
-    = render partial: 'list', locals: {events: @events}
+    - elems = [ { value: "Карта", id: 'map_tab'}, { value: "События", id: 'list_tab'}]
+    = generate_control_panel('events_block', elems, 'list_tab')
 
-    #map{style: 'width: 800px; height: 500px;'}
+    .events_block_content#map_tab_content
+      #map{style: ' width: 800px; height: 500px;'}
+    .events_block_content#list_tab_content 
+      = render partial: 'list', locals: {events: @events}
+
+:javascript
+  Event.MapBuilder.init_map();
+  $('#map_tab_content').hide();
+  Events.ControlButtonsBehaviou.init(".events_block");
