--- a/app/views/events/_search.html.haml
+++ b/app/views/events/_search.html.haml
@@ -1,2 +1,3 @@
-%label{:for => "search_form"}
-  = text_field_tag "#{resourse}[query]", value, id: 'search_form'
+#serch
+  %label{:for => "search_form"}
+    = text_field_tag "#{resourse}[query]", value, id: 'search_field' 
