--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -6,3 +6,48 @@
 .active {
 	color: green;
 }
+.filter{
+	padding-top: 10px;
+	width: 150px;
+	height: 130px;
+}
+
+#serch{
+	width: 150px;
+	height: 30px;	
+}
+
+#category_box{
+	width: 150px;
+	height: 50px;
+	margin: 10px;
+	overflow: hidden;
+}
+
+#category_box:hover{
+	width: 300px;
+	height: 150px;
+	margin: 10px;
+	float: left;
+	background: transparent;
+	background-color: white;
+}
+
+
+#category_box label, input {
+	float:left;
+}
+
+#search_form{
+    display: block;
+    width: 150px;
+	height: 120px;
+}
+
+.list_body{
+
+	display: block;
+	margin: 10px;
+	float: left;
+	clear: both;
+}
