--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,8 +1,9 @@
-%span.filter Фильтр
-= form_tag events_path, method: "get",  id: "search_form" do
-  = render partial: "search", locals: {resourse: "filter", value: @filter.params[:query]}
-  = render partial: "category_checkbox"
-  = submit_tag "Найти"
+.filter 
+  %span Фильтр
+  = form_tag events_path, method: "get",  id: "search_form" do
+    = render partial: "search", locals: {resourse: "filter", value: @filter.params[:query]}
+    = render partial: "category_checkbox"
+    = submit_tag "Найти"
 
 .list_body
   #dashbord
@@ -11,7 +12,7 @@
 
     .events_block_content#map_tab_content{style: "height: 800px; width: 1200px;"}
       #map{style: "height: 800px; width: 1200px;"}
-    .events_block_content#list_tab_content 
+    .events_block_content#list_tab_content
       = render partial: 'list', locals: {events: @events}
 
 :javascript
