big changes: ajax filter behavior, map point to lat lng, geocoder

--- a/app/views/events/_category_checkbox.html.haml
+++ b/app/views/events/_category_checkbox.html.haml
@@ -1,4 +1,4 @@
 - Category.all.each do |category|
   %label{:for => "category_#{category.id}"}
-    = check_box_tag 'filter[categories][]', category.id, @filter.category?(category.id.to_s), {:id => "category_#{category.id}", :class => "category-checkbox"}
+    = check_box_tag "#{name}[categories][]", category.id, object.category?(category.id.to_s), {:id => "category_#{category.id}", :class => "category-checkbox"}
     = category.name
