--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,35 +1,43 @@
-= form_for @event do |f|
-  - if @event.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
-      %ul
-        - @event.errors.full_messages.each do |message|
-          %li= message
+.form_content
+  .form_block{style: 'float: left; width: 45%;'}
+    = form_for @event do |f|
+      - if @event.errors.any?
+        #error_explanation
+          %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
+          %ul
+            - @event.errors.full_messages.each do |message|
+              %li= message
 
-  .field
-    = current_user.profile.user_name
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description, "Описание"
-    = f.text_area :description
-  .field
-    = f.label :date_time, "Дата мероприятия"
-    = f.text_field :date_time
-  .field
-    = f.label :latitude, "Широта"
-    = f.text_field :latitude
-  .field
-    = f.label :longitude, "Долгота"
-    = f.text_field :longitude
-  .field
-    = f.label :private, 'Приватное мероприятие?'
-    = f.check_box :private
-  .field
-    = f.label :address, "Адрес"
-    = f.text_field :address
-  .field
-    = f.select :category_ids, options_for_select(Category.all.map {|category| [category.name, category.id]}, @event.category_ids), {}, :multiple => true
-  .actions
-    = f.submit 'Save'
+      .field
+        = current_user.profile.user_name
+      .field
+        = f.label :title
+        = f.text_field :title
+      .field
+        = f.label :description, "Описание"
+        = f.text_area :description
+      .field
+        = f.label :date_time, "Дата мероприятия"
+        = f.text_field :date_time
+      .field
+        = f.label :latitude, "Широта"
+        = f.text_field :latitude
+      .field
+        = f.label :longitude, "Долгота"
+        = f.text_field :longitude
+      .field
+        = f.label :private, 'Приватное мероприятие?'
+        = f.check_box :private
+      .field
+        = f.label :address, "Адрес"
+        = f.text_field :address
+      .field
+        = render partial: "category_checkbox", locals: { object: @event, name: 'event' }
+      .actions
+        = f.submit 'Save'
+  
+  .map_container{style: 'float: left; height: 30%; width: 45%;'}
+    #map{style: "height: 500px; width: 100%;"}
+
+:javascript
+  Events.MapBuilder.init_map_with_one(#{raw @point.to_json});
