--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,7 +1,8 @@
 %h1 Editing event
-= render 'form', event: @event
+.cont
+  = link_to 'Show', @event
+  \|
+  = link_to 'Back', events_path
 
-= link_to 'Show', @event
-\|
-= link_to 'Back', events_path
-
+.form_content
+  = render 'form', event: @event
