--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,5 +1,5 @@
-.form_content
-  .form_block{style: 'float: left; width: 45%;'}
+.form_content{style: 'margin-left: 10%; height: 500px;'}
+  .form_block{style: 'float: left; width: 25%;'}
     = form_for @event do |f|
       - if @event.errors.any?
         #error_explanation
