--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -30,7 +30,8 @@
     = @event.checked_by_as
 
 
-  = link_to 'Edit', edit_event_path(@event)
+  -if can?(:edit, @event) 
+    = link_to 'Edit', edit_event_path(@event)
   \|
   = link_to 'Back', events_path
 
